restructure code and upto date latest changes